--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,17 @@
     <name>Warranty Claim Fraud Detector</name>
     <description>Demo project for detecting warranty claim fraud</description>
 
-    <properties>
-        <java.version>17</java.version>
-        <spring.boot.version>3.3.1</spring.boot.version>
-    </properties>
-
+    <!-- Use a fixed Spring Boot parent version -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>3.3.1</version>
         <relativePath/>
     </parent>
+
+    <properties>
+        <java.version>17</java.version>
+    </properties>
 
     <dependencies>
         <!-- Spring Boot Starters -->
