--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,13 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
+
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=yourpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.datasource.password=Amypo
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# Optional: Hibernate will auto-detect dialect, no need to specify
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 jwt.secret=yourSuperSecretKey12345
 jwt.expiration=3600000
